# vica

./: .gitignore  README.md
rosbag_files/: laser_scan_2019-04-23-09-58-14.bag
src/: README.md
src/tensorflow_object_detector/config/: mscoco_labels.txt
src/tensorflow_object_detector/db_object/: database.ods  listobject.db  table_object.txt
src/tensorflow_object_detector/launch/: object_detection.launch
src/tensorflow_object_detector/src/: tensorflow_object_detector_nodecore.cpp
src/vica_act/: CMakeLists.txt  package.xml
src/vica_act/src/: navigation.cpp  navigation.h  vica_action_node.cpp
src/vica_act/srv/: vica_act_goto_pos.srv
src/vica_detect/: CMakeLists.txt  README.md  package.xml
src/vica_detect/launch/: vica_detect.launch
src/vica_detect/src/: deepcam_object_detect.cpp  deepcam_object_detect.h  laser_detect.cpp  laser_detect.h  merg_detect.cpp  merg_detect.h  rgb_object_detect.cpp  rgb_object_detect.h
src/vica_detect_lidar_path/: CMakeLists.txt  README.md  package.xml
src/vica_detect_lidar_path/src/: detect_lidar_path_node.cpp
src/vica_eval/: CMakeLists.txt  README.md  package.xml
src/vica_eval/data/: .~lock.dada_scen_1.csv#  .~lock.dada_scen_2.csv#  dada_scen_1.csv  dada_scen_2.csv
src/vica_eval/src/: com.cpp  com.h  graph_calc.cpp  graph_calc.h  object_type.cpp  object_type.h  vica_eval_node.cpp
src/vica_eval_graph/: CMakeLists.txt  package.xml
src/vica_eval_graph/graph/: dmp_graph_path.dot
src/vica_eval_graph/src/: graph.cpp  graph.h  graph_node.cpp
src/vica_joy_control/: CMakeLists.txt  package.xml
src/vica_joy_control/launch/: joy_control.launch
src/vica_joy_control/src/: joystick_control.cpp
src/vica_launch/: CMakeLists.txt  package.xml
src/vica_launch/launch/: vica.launch
src/vica_msgs/: CMakeLists.txt  package.xml
src/vica_msgs/msg/: path_angles.msg  path_angles_list.msg
src/vica_msgs/srv/: vica_eval_graph_get_list_best_pos.srv
src/vica_robot/: CMakeLists.txt  package.xml
src/vica_robot/config/: diff_driver.yam  gazebo_ros_control_params.yam
src/vica_robot/launch/: vica_robot.launch
src/vica_robot/meshes/: base.stl  kinect.stl  lwheel.stl  rwheel.stl  wheel.stl
src/vica_robot/rviz/: urdf.rviz
src/vica_robot/urdf/: macros.xacro  model.xacro  model_tmp1.xacro  model_tmp2.xacro  model_tmp3_fonc.xacro  robot.gazebo
src/vica_robot_gazebo/: CMakeLists.txt  package.xml
src/vica_robot_gazebo/launch/: vica_robot_gazebo.launch
src/vica_robot_gazebo/worlds/: robot.world  robot_cafe.world  robot_cube.world  robot_office.world  word_presentation
src/vica_sim/: CMakeLists.txt  README.md  package.xml
src/vica_sim/launch/: vica_sim.launch
src/vica_sim/src/: agent_model.cpp  agent_model.h  environment_model.cpp  environment_model.h  sma_img.cpp  sma_img.h  vica_sim_node.cpp
src/vica_sim/srv/: vica_sim_agent_add.srv  vica_sim_agent_delete.srv  vica_sim_agent_get.srv  vica_sim_agent_get_list.srv  vica_sim_agent_update.srv  vica_sim_env_get_size.srv  vica_sim_env_gui.srv  vica_sim_env_init.srv  vica_sim_env_set_size.srv  vica_sim_sim_get_sim_result.srv  vica_sim_sim_set_target_pos.srv
src/work_gen_img/: CMakeLists.txt  package.xml
src/work_gen_img/launch/: work_gen_img.launch
src/work_gen_img/src/: cube_spawner.cpp  gazebo_cube_spawner.h  get_screenshot.cpp
src/work_graph_visible/: CMakeLists.txt  package.xml
src/work_graph_visible/src/: graph.cpp  graph.h  graph_viz.cpp
